--- a/javascript-text-1/0.javascript-test/style.css
+++ b/javascript-text-1/0.javascript-test/style.css
@@ -1,3 +1,10 @@
+
+:root{
+    --primary-color1: purple ;
+}
+#h1yy{
+    color: var(--primary-color1);
+}
 .btn{
     width: 200px;
     height: 55px;
